tests/stacks/gcp/test_data/expected/admissionregistration.k8s.io_v1beta1_mutatingwebhookconfiguration_admission-webhook-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/admission-webhook-cert
  labels:
    app: admission-webhook
    app.kubernetes.io/component: poddefaults
    app.kubernetes.io/instance: poddefaults-v0.7.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: poddefaults
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v0.7.0
    kustomize.component: admission-webhook
  name: admission-webhook-mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: ""
    service:
      name: admission-webhook-service
      namespace: kubeflow
      path: /apply-poddefault
  name: admission-webhook-deployment.kubeflow.org
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
